--- a/web_flask/templates/5-number.html
+++ b/web_flask/templates/5-number.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Number</title>
+        <title>HBNB</title>
     </head>
     <body>
-        <h1>Number: {{ n }}</h1>
+        <h1>Number: 89</h1>
     </body>
 </html>
