--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,10 +4,10 @@
     <title>HBNB</title>
   </head>
   <body>
-      {% if n is even %}
-      <h1>Number: {{n}} is odd</h1>
+      {% if number is even %}
+      <h1>Number: {{number}} is odd</h1>
       {% else %}
-      <h1>Number: {{n}} is odd</h1>
+      <h1>Number: {{number}} is odd</h1>
       {% endif %}
   </body>
 </html>
